--- a/.github/workflows/check-license-header.yaml
+++ b/.github/workflows/check-license-header.yaml
@@ -18,14 +18,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       
-      - name: Import GPG key
-        uses: crazy-max/ghaction-import-gpg@v6
-        with:
-            gpg_private_key: ${{ secrets.CSM_GPG_PRIVATE_KEY }}
-            git_user_signingkey: true
-            git_commit_gpgsign: true
-            git_tag_gpgsign: true
-            git_config_global: true
+      # - name: Import GPG key
+      #   uses: crazy-max/ghaction-import-gpg@v6
+      #   with:
+      #       gpg_private_key: ${{ secrets.CSM_GPG_PRIVATE_KEY }}
+      #       git_user_signingkey: true
+      #       git_commit_gpgsign: true
+      #       git_tag_gpgsign: true
+      #       git_config_global: true
 
       - name: Run
         shell: bash
