--- a/.github/workflows/check-license-header.yaml
+++ b/.github/workflows/check-license-header.yaml
@@ -39,6 +39,9 @@ jobs:
 
       - name: Commit fixed files
         run: |
+          git config --global user.email "you@example.com"
+          git config --global user.name "Your Name"
+          git add .
           ls -l
           git branch
           git commit -S -m "Update license header"
