--- a/.github/workflows/go-common.yml
+++ b/.github/workflows/go-common.yml
@@ -11,6 +11,10 @@ name: Common Workflows
 
 on:
   workflow_call:
+    inputs:
+      autofix:
+        required: false
+        type: string
 
 # Set defaults
 env:
@@ -124,3 +128,36 @@ jobs:
   # dependabot_automerge:
   #   name: Automerge Dependabot PRs
   #   uses: dell/common-github-actions/.github/workflows/dependabot-automerge.yml@main
+  
+  check-license-header:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      
+      # - name: Import GPG key
+      #   uses: crazy-max/ghaction-import-gpg@v6
+      #   with:
+      #       gpg_private_key: ${{ secrets.CSM_GPG_PRIVATE_KEY }}
+      #       git_user_signingkey: true
+      #       git_commit_gpgsign: true
+      #       git_tag_gpgsign: true
+      #       git_config_global: true
+
+      - name: Check license headers
+        uses: dell/common-github-actions/license-checker@feature/license-header
+        with:
+          directories: .
+          options: -ri
+
+      # TODO : we will enable this once autofix is ready
+      # - name: Commit fixed files
+      #   run: |
+      #     git config --global user.email "you@example.com"
+      #     git config --global user.name "Your Name"
+      #     git add .
+      #     ls -l
+      #     git branch
+      #     # git commit -S -m "Update license header"
+      #     git commit -m "Update license header"
+      #     git push
