--- a/license-checker/Dockerfile
+++ b/license-checker/Dockerfile
@@ -7,9 +7,11 @@ LABEL "com.github.actions.color"="gray-dark"
 
 LABEL version="1.0.0"
 
-# COPY go.mod go.sum main.go LICENSE-HEADER.txt ./
-COPY . ./
-RUN ls -al
+WORKDIR /app
+
+COPY go.mod go.sum main.go LICENSE-HEADER.txt ./
 RUN go build .
-RUN ls -al
-ENTRYPOINT ["entrypoint.sh"]
+RUN pwd
+RUN ls -l
+
+ENTRYPOINT ["/app/license-checker"]
