--- a/.github/workflows/go-common.yml
+++ b/.github/workflows/go-common.yml
@@ -136,6 +136,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Check license headers
-        uses: dell/common-github-actions/license-checker@feature/license-header        
+        uses: dell/common-github-actions/license-checker@main
         with:
           autofix: false
