Feature/license header (#153)
* updated license header check action

* updated action

* updated license checking logic

* action update

* action update

* updated license commit

* commented gpg sign for testing

* updated git details

* removed signing

* Removed autofix

* updated autofix

* common action update

* Implemented auto-fix option

* binary update

* Updated license action

* dockerfile update

* action update

* updated image building

* workflow update

* docker command update

* dockerfile update

* dockerfile update

* added entrypoint

* updated dockerfile

* fixed review comments

* Removed unnecessary logs

* Added documentation

* doc update

--- a/.github/workflows/go-common.yml
+++ b/.github/workflows/go-common.yml
@@ -11,6 +11,10 @@ name: Common Workflows
 
 on:
   workflow_call:
+    inputs:
+      autofix:
+        required: false
+        type: string
 
 # Set defaults
 env:
@@ -124,3 +128,14 @@ jobs:
   # dependabot_automerge:
   #   name: Automerge Dependabot PRs
   #   uses: dell/common-github-actions/.github/workflows/dependabot-automerge.yml@main
+  
+  check-license-header:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Check license headers
+        uses: dell/common-github-actions/license-checker@main
+        with:
+          autofix: false
