add codeowners in ist zone

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -8,6 +8,7 @@
 # order is alphabetical for easier maintenance.
 #
 # Aron Suliman (AronAtDell)
+# Chiman Jain (chimanjain)
 # Christian Coffield (ChristianAtDell)
 # Don Khan (donatwork)
 # Meghana GM (meggm)
@@ -16,9 +17,10 @@
 # Harish Prabhakara (harishp8889)
 # Matt Schmaelzle (mjsdell)
 # Prasanna Muthukumaraswamy (prablr79)
+# Nitesh Rewatkar (nitesh3108)
 # Sharmila Ramamoorthy (sharmilarama)
 # Shayna Finocchiaro (shaynafinocchiaro)
 
 
 # for all files:
-* @AronAtDell @ChristianAtDell @donatwork @meggm @gallacher @hoppea2 @harishp8889 @mjsdell @prablr79 @sharmilarama @shaynafinocchiaro
+* @AronAtDell @chimanjain @ChristianAtDell @donatwork @meggm @gallacher @hoppea2 @harishp8889 @mjsdell @prablr79 @nitesh3108 @sharmilarama @shaynafinocchiaro
