--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -69,52 +69,14 @@ jobs:
       version: ${{ inputs.version }}
     secrets: inherit
 
-  # we will not going to push images to dockerhub and quay for the patch release as we do not have the image to be retagged, The developers has to build and push it manually to the repository
+  # We will not push images to quay.io for a patch release as we do not have the image to be retagged
+  # The developers need to build and push it manually to the repository
   push-images:
     if: ${{ inputs.version == 'patch' || inputs.version == 'minor' || inputs.version == 'major' }}
-    name: Release images to Dockerhub and Quay
+    name: Release images to Quay
     needs: release-and-tag
     runs-on: ubuntu-latest
     steps:
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-
-      - name: Push images to Dockerhub
-        shell: bash
-        run: |
-          # Push each comma seperated images by splitting the string with ','
-          images_list=$(echo '${{ inputs.images }}' | tr -d '[]"' | tr ',' ' ')
-          for image in $images_list; do
-
-            latest_version=$(curl -s https://registry.hub.docker.com/v2/repositories/dellemc/$image/tags | jq -r '.results[].name' | sort -V | tail -n 1)
-            echo "Current latest version of $image:$latest_version"
-
-            IFS='.' read -r -a version_parts <<< "$latest_version"
-
-            if "${{ inputs.version == 'major' }}"; then
-              # major version bump up
-              version_parts[0]=$(expr ${version_parts[0]} + 1)
-              new_version="${version_parts[0]}.0.0"
-            fi
-            if "${{ inputs.version == 'minor' }}"; then
-              # minor version bump up
-              version_parts[1]=$(expr ${version_parts[1]} + 1)
-              new_version="${version_parts[0]}.${version_parts[1]}.0"
-            fi
-            if "${{ inputs.version == 'patch' }}"; then
-              # patch version bump up
-              version_parts[2]=$(expr ${version_parts[2]} + 1)
-              new_version="${version_parts[0]}.${version_parts[1]}.${version_parts[2]}"
-            fi
-
-           echo "Pushing image: $image:$new_version"                      
-           docker pull dellemc/$image:nightly
-           docker tag dellemc/$image:nightly dellemc/$image:$new_version
-           docker push dellemc/$image:$new_version
-           docker tag dellemc/$image:$new_version dellemc/$image:latest
-           docker push dellemc/$image:latest
-          done
-
       - name: Push images to Quay.io
         shell: bash
         run: |
@@ -147,7 +109,7 @@ jobs:
             fi
 
            # Get manifest digest
-            SHA=$(curl -s --location --request GET https://quay.io/api/v1/repository/$REPOSITORY/$image/tag?specificTag=nightly --header 'Content-Type: application/json' --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' | jq -r '.tags[0].manifest_digest')            
+            SHA=$(curl -s --location --request GET https://quay.io/api/v1/repository/$REPOSITORY/$image/tag?specificTag=nightly --header 'Content-Type: application/json' --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' | jq -r '.tags[0].manifest_digest')
             echo "Pushing image: $image:$new_version"
 
             # Create version and latest tags
