--- a/.github/workflows/go-common.yml
+++ b/.github/workflows/go-common.yml
@@ -128,14 +128,15 @@ jobs:
   # dependabot_automerge:
   #   name: Automerge Dependabot PRs
   #   uses: dell/common-github-actions/.github/workflows/dependabot-automerge.yml@main
-  
-  check-license-header:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
 
-      - name: Check license headers
-        uses: dell/common-github-actions/license-checker@main
-        with:
-          autofix: false
+  # TODO: Need to reconsider how to deal with generated files. Need to also test on a wider set of csm repositories.
+  #check-license-header:
+    #runs-on: ubuntu-latest
+    #steps:
+      #- name: Checkout repository
+       # uses: actions/checkout@v4
+
+     # - name: Check license headers
+       # uses: dell/common-github-actions/license-checker@main
+       # with:
+        #  autofix: false
