--- a/.github/workflows/trigger-auto-csm-release-workflow.yaml
+++ b/.github/workflows/trigger-auto-csm-release-workflow.yaml
@@ -30,14 +30,12 @@ jobs:
             "dell/csm-metrics-powermax",
             "dell/csm-metrics-powerscale",
             "dell/csm-metrics-powerstore",
-            "dell/csm-metrics-unity",
             "dell/csm-operator",
             "dell/csm-replication",
-            "dell/karavi-authorization",
             "dell/karavi-resiliency",
-            "dell/karavi-observability",
             "dell/karavi-metrics-powerflex",
             "dell/karavi-topology",
+            "dell/cert-csi",
           ]
 
     steps:
