--- a/.github/configs/yamllint/yamllint.yaml
+++ b/.github/configs/yamllint/yamllint.yaml
@@ -37,3 +37,8 @@ rules:
   trailing-spaces: enable
   truthy:
     level: warning
+
+
+ignore: |
+  test/podmontest/deploy/templates/vm-template.yaml
+
