update driver operator driver version update github action

--- a/.github/workflows/operator-driver-version-update.yaml
+++ b/.github/workflows/operator-driver-version-update.yaml
@@ -14,7 +14,7 @@ on:
   workflow_call:
     inputs:
       csm-version:
-        description: "CSM program version, ex: v1.12.0, v1.13.0, ..."
+        description: "CSM program version, ex: v1.14.0, v1.15.0, ..."
         required: true
         type: string
       update-option:
@@ -23,7 +23,7 @@ on:
         type: string
 
 jobs:
-  read-values:
+  driver-version-update:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout csm repository
@@ -36,14 +36,26 @@ jobs:
         id: read_values
         run: |
           extract_value() {
-            grep -E "^$1" csm/config/csm-versions.yaml | cut -d ':' -f 2 | tr -d ' '
+            grep -E "^$1" csm/config/csm-versions.yaml | cut -d ':' -f 2 | tr -d '[:space:]'
           }
+          remove_v_prefix() {
+            local version="$1"
+            version="${version#v}"
+            echo "$version"
+          }
+
           csm_version=$(extract_value 'csm-version')
           csi_powerscale=$(extract_value 'csi-powerscale')
-          csi_powerstore=$(extract_value 'csi_powerstore')
-          csi_powermax=$(extract_value 'csi_powermax')
-          csi_vxflexos=$(extract_value 'csi_vxflexos')
-          csi_unity=$(extract_value 'csi_unity')
+          csi_powerstore=$(extract_value 'csi-powerstore')
+          csi_powermax=$(extract_value 'csi-powermax')
+          csi_vxflexos=$(extract_value 'csi-vxflexos')
+          csi_unity=$(extract_value 'csi-unity')
+
+          csi_powerscale=$(echo "$csi_powerscale" | grep -oP '(?<=^v).*|^[^v].*')
+          csi_powerstore=$(echo "$csi_powerstore" | grep -oP '(?<=^v).*|^[^v].*')
+          csi_powermax=$(echo "$csi_powermax" | grep -oP '(?<=^v).*|^[^v].*')
+          csi_vxflexos=$(echo "$csi_vxflexos" | grep -oP '(?<=^v).*|^[^v].*')
+          csi_unity=$(echo "$csi_unity" | grep -oP '(?<=^v).*|^[^v].*')
 
           echo "CSM_VERSION=$csm_version" >> $GITHUB_ENV
           echo "CSI_POWERSCALE=$csi_powerscale" >> $GITHUB_ENV
@@ -56,9 +68,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: dell/csm-operator
-
-      - name: Install dos2unix
-        run: sudo apt-get update && sudo apt-get install -y dos2unix
 
       - name: Set Up Go Environment
         uses: actions/setup-go@v5
@@ -78,11 +87,11 @@ jobs:
           csm_repo_ver="$(echo -e "${CSM_VERSION}" | sed -e 's/^[[:space:]]*//' -e 's/[[:space:]]*$//')"
           csm_ver_provided="$(echo -e "${csm_ver_provided}" | sed -e 's/^[[:space:]]*//' -e 's/[[:space:]]*$//')"
 
+          echo "./.github/scripts/driver-version-update.sh --driver_update_type \"major\" --release_type \"${{ inputs.update-option }}\" --powerscale_version \"$CSI_POWERSCALE\" --powermax_version \"$CSI_POWERMAX\" --powerflex_version \"$CSI_VXFLEXOS\" --powerstore_version \"$CSI_POWERSTORE\" --unity_version \"$CSI_UNITY\""
           if [ $csm_repo_ver == $csm_ver_provided ]; then
           echo "CSM version verified, proceeding with the update..."
-          dos2unix ./.github/scripts/driver-version-update.sh
           chmod +x ./.github/scripts/driver-version-update.sh
-          bash ./.github/scripts/driver-version-update.sh --driver_update_type "major" --release_type ${{ inputs.update-option }} --powerscale_version $CSI_POWERSCALE --powermax_version $CSI_POWERMAX --powerflex_version $CSI_VXFLEXOS --powerstore_version $CSI_POWERSTORE --unity_version $CSI_UNITY
+          bash ./.github/scripts/driver-version-update.sh --driver_update_type "major" --release_type "${{ inputs.update-option }}" --powerscale_version "$CSI_POWERSCALE" --powermax_version "$CSI_POWERMAX" --powerflex_version "$CSI_VXFLEXOS" --powerstore_version "$CSI_POWERSTORE" --unity_version "$CSI_UNITY"
           else
           echo "CSM version mismatch detected. Please verify and update the version file in the CSM repository."
           fi
