updated release process

--- a/.github/workflows/create-tag-release.yaml
+++ b/.github/workflows/create-tag-release.yaml
@@ -1,5 +1,6 @@
+# This workflow is used to create Github Tag and Release
 name: Create Tag and Release
-
+# Invocable as a reusable workflow
 on:
   workflow_call:
     inputs:
