--- a/license-checker/action.yml
+++ b/license-checker/action.yml
@@ -1,3 +1,11 @@
+# Copyright (c) 2025 Dell Inc., or its subsidiaries. All Rights Reserved.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#  http://www.apache.org/licenses/LICENSE-2.0
+
 name: "License Header Checker"
 description: "Checks for license header"
 
@@ -14,3 +22,4 @@ runs:
   image: "Dockerfile"
   args:
     - ${{ inputs.autofix }}
+    - ${{ inputs.exclude-files }}
