--- a/.github/workflows/release-image.yaml
+++ b/.github/workflows/release-image.yaml
@@ -32,7 +32,7 @@ jobs:
         shell: bash
         run: |
           images_list=$(echo '${{ inputs.images }}' | tr -d '[]"' | tr ',' ' ')
-          REPOSITORY="delltech/csm"
+          REPOSITORY="dell/container-storage-modules"
 
           for image in $images_list; do
             latest_version=$(curl -s https://quay.io/api/v1/repository/$REPOSITORY/$image/tag/?limit=100 | jq -r '.tags[].name' | sort -V | tail -n 1)
