--- a/.github/workflows/process-inputs.yaml
+++ b/.github/workflows/process-inputs.yaml
@@ -38,8 +38,8 @@ jobs:
         shell: bash
         run: |
           valid_options=("major" "minor" "patch" "version")
-          if [[ ! " ${valid_options[@]} " =~ " ${option} " ]]; then
-            echo "Invalid option: $option"
+          if [[ ! "${valid_options[@]}" =~ "${{ inputs.option }}" ]]; then
+            echo "Invalid option: ${{ inputs.option }}"
             exit 1
           fi
 
