--- a/.github/workflows/release-creator.yaml
+++ b/.github/workflows/release-creator.yaml
@@ -35,26 +35,27 @@ jobs:
           fetch-depth: 0 # Fetch the full history including tags
           ref: ${{ github.ref }} # Checkout the branch from which the workflow is triggered
 
-      # we will set the release version based on the user given input for older patch releases only ex: n-1, n-2
+      # we will set the release version based on the user given input
       - name: Set release version
-        if: ${{ inputs.version != 'patch' || inputs.version != 'minor' || inputs.version != 'major' }}
+        if: ${{ inputs.version != 'patch' && inputs.version != 'minor' && inputs.version != 'major' }}
+        env:
+          VERSION: "${{ inputs.version }}"
         run: |
-          echo "REL_VERSION=v${{ inputs.version }}" >> $GITHUB_ENV
+          echo "REL_VERSION=v${{ env.VERSION }}" >> $GITHUB_ENV
 
-      # we will auto bump up the version if it is only patch, minor, or major else we will just use the user given input
+      # we will bump up the version if it is one of patch, minor, or major
       - name: Get latest release
         if: ${{ inputs.version == 'patch' || inputs.version == 'minor' || inputs.version == 'major' }}
         run: |
           latest_version=$(curl -s https://api.github.com/repos/${GITHUB_REPOSITORY}/releases/latest | jq -r .tag_name)
           echo "MY_VAR=${latest_version}" >> $GITHUB_ENV
-          echo "latest_version=${latest_version}"
 
       - name: Increment version
         if: ${{ inputs.version == 'patch' || inputs.version == 'minor' || inputs.version == 'major' }}
         env:
           MY_VAR: ${{ env.MY_VAR }}
         run: |
-          current_version=$MY_VAR
+          current_version="$MY_VAR"
 
           # The latest version does not exist. Set it to v0.0.0.
           if [[ "$current_version" = "null" ]]; then
@@ -110,13 +111,16 @@ jobs:
       - name: Set file name
         shell: bash
         run: |
-          FILE=""
-          if [ -d "cert-csi-linux-amd64" ]; then
-              FILE="./cert-csi-linux-amd64/cert-csi-linux-amd64"
-          fi
+          set -euo pipefail
 
-          if [ -d "repctl-linux-amd64" ]; then
-              FILE="repctl-linux-amd64"
+          echo "Checking downloaded artifacts..."
+          FILE=""
+          if [ -f "cert-csi-linux-amd64" ]; then
+            FILE="cert-csi-linux-amd64"
+          elif [ -f "repctl-linux-amd64" ]; then
+            FILE="repctl-linux-amd64"
+          else
+            echo "No binary file found."
           fi
 
           echo "FILE_NAME=$FILE" >> $GITHUB_ENV
