--- a/.github/workflows/release-creator.yaml
+++ b/.github/workflows/release-creator.yaml
@@ -17,10 +17,17 @@ on:
         description: "Semantic version to release. Ex: major, minor, or patch"
         required: true
         type: string
+
+    outputs:
+      rel_version:
+        description: "The released version of the repository"
+        value: ${{ jobs.tag-and-release.outputs.rel_version }}
 jobs:
   tag-and-release:
     name: Create tag and release
     runs-on: ubuntu-latest
+    outputs:
+      rel_version: ${{ steps.create-rel-branch.outputs.rel_version }}
     steps:
       - name: Checkout the code
         uses: actions/checkout@v5
@@ -28,26 +35,27 @@ jobs:
           fetch-depth: 0 # Fetch the full history including tags
           ref: ${{ github.ref }} # Checkout the branch from which the workflow is triggered
 
-      # we will set the release version based on the user given input for older patch releases only ex: n-1, n-2
+      # we will set the release version based on the user given input
       - name: Set release version
-        if: ${{ inputs.version != 'patch' || inputs.version != 'minor' || inputs.version != 'major' }}
+        if: ${{ inputs.version != 'patch' && inputs.version != 'minor' && inputs.version != 'major' }}
+        env:
+          VERSION: "${{ inputs.version }}"
         run: |
-          echo "REL_VERSION=v${{ inputs.version }}" >> $GITHUB_ENV
+          echo "REL_VERSION=v${{ env.VERSION }}" >> $GITHUB_ENV
 
-      #  we will auto bump up the version if it is only patch, minor, or major else we will just use the user given input
+      # we will bump up the version if it is one of patch, minor, or major
       - name: Get latest release
         if: ${{ inputs.version == 'patch' || inputs.version == 'minor' || inputs.version == 'major' }}
         run: |
           latest_version=$(curl -s https://api.github.com/repos/${GITHUB_REPOSITORY}/releases/latest | jq -r .tag_name)
-          echo "MY_VAR=${latest_version}" >> $GITHUB_ENV            
-          echo "latest_version=${latest_version}"
+          echo "MY_VAR=${latest_version}" >> $GITHUB_ENV
 
       - name: Increment version
         if: ${{ inputs.version == 'patch' || inputs.version == 'minor' || inputs.version == 'major' }}
         env:
           MY_VAR: ${{ env.MY_VAR }}
         run: |
-          current_version=$MY_VAR
+          current_version="$MY_VAR"
 
           # The latest version does not exist. Set it to v0.0.0.
           if [[ "$current_version" = "null" ]]; then
@@ -56,7 +64,7 @@ jobs:
 
           current_version=(${current_version#v}) # remove 'v' prefix from $current_version"
 
-          IFS='.' read -r -a version_parts <<< "$current_version"              
+          IFS='.' read -r -a version_parts <<< "$current_version"
 
           if "${{ inputs.version == 'major' }}"; then
               # major version bump up
@@ -100,14 +108,20 @@ jobs:
         uses: actions/download-artifact@v5.0.0
 
       # This is required to check if the binary exists and update its name to the release.
-      - run: |
-          FILE="./cert-csi-linux-amd64/cert-csi-linux-amd64"
-          if [ -d "repctl-linux-amd64" ]; then
-              FILE="./repctl-linux-amd64/repctl-linux-amd64"
-          fi
-          echo "File name: $FILE"
-          echo "FILE_NAME=$FILE" >> $GITHUB_ENV
+      - name: Set file name
         shell: bash
+        run: |
+          echo "Checking downloaded artifacts..."
+          FILE=""
+          if [ -f "cert-csi-linux-amd64" ]; then
+            FILE="cert-csi-linux-amd64"
+          elif [ -f "repctl-linux-amd64" ]; then
+            FILE="repctl-linux-amd64"
+          else
+            echo "No binary file found."
+          fi
+
+          echo "FILE_NAME=$FILE" >> $GITHUB_ENV
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
@@ -125,6 +139,7 @@ jobs:
           FILE_NAME: ${{ env.FILE_NAME }}
 
       - name: Create release branch
+        id: create-rel-branch
         env:
           REL_VERSION: ${{ env.REL_VERSION }}
         run: |
@@ -137,3 +152,6 @@ jobs:
             git checkout -b $branch_name
             git push origin $branch_name
           fi
+
+          # Save the release version after everything is succcessful.
+          echo "rel_version=$REL_VERSION" >> $GITHUB_OUTPUT
